--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "All kind of practicies with ai agent"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "autogen>=0.9.7",
+    "autogen-agentchat>=0.7.2",
     "chromadb>=1.0.15",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
