--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "autogen>=0.9.7",
     "autogen-agentchat>=0.7.2",
     "chromadb>=1.0.15",
+    "crewai>=0.159.0",
     "langchain>=0.3.27",
     "langchain-community>=0.3.27",
     "langchain-ollama>=0.3.6",
     "openai>=1.99.5",
+    "sentence-transformers>=5.1.0",
 ]
