--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "langchain-community>=0.3.27",
     "langchain-ollama>=0.3.6",
     "openai>=1.99.5",
+    "pygame>=2.6.1",
     "sentence-transformers>=5.1.0",
 ]
