--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,6 @@ dependencies = [
     "langchain-ollama>=0.3.6",
     "openai>=1.99.5",
     "pygame>=2.6.1",
+    "semantic-kernel[ollama]>=1.35.3",
     "sentence-transformers>=5.1.0",
 ]
