--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "langchain-community>=0.3.27",
     "langchain-ollama>=0.3.6",
     "openai>=1.99.5",
+    "promptflow>=1.18.1",
+    "promptflow-tools>=1.6.1",
     "pygame>=2.6.1",
     "requests>=2.32.4",
     "semantic-kernel[ollama]>=1.35.3",
